                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 07-11-2004 Updated finnish strings.xml (thanks nanite1k)
  - 06-11-2004 updated: Italian language file (Thnx to kotix)
  - 06-11-2004 updated: Dutch language file (Thnx to joepmeloenx)
  - 06-11-2004 updated: German (Austrian) language file (Thnx to CEOMR)
  - 06-11-2004 updated: German language file
  - 06-11-2004 changed: Some strings from cd+g support changed for better translation
  - 06-11-2004 fixed ttf font .srt subtitle lockup issue
  - 06-11-2004 changed: CD+G support updated (Thnx to stcogolin)
  - 06-11-2004 moved: Random slideshow button to My Pictures (from settings)
  - 06-11-2004 fixed: default resolution tags in skin.xml are now case-insensitive
  - 06-11-2004 changed: default IP addresses if none are set.
  - 06-11-2004 fixed: CUtil::Lower not work correctly in multi byte language 
  - 04-11-2004 added: OSD selection of STEREO/LEFT/RIGHT for 2 channel audio.
  - 04-11-2004 fixed: 3/5 channel non-passthrough audio lockup
  - 04-11-2004 fixed: smb multibyte language not display correctly in some places
  - 03-11-2004 updated: German (Austrian) language file (Thnx to CEOMR)
  - 03-11-2004 changed: progress control now can have an overlay texture
  - 02-11-2004 added: GUI code for monkeyh1
  - 02-11-2004 added: Context menu to My Pictures
  - 02-11-2004 added: Random slideshow ability
  - 02-11-2004 added: Recursive thumb generation
  - 02-11-2004 added: Folder thumbs for picture folders
  - 02-11-2004 fixed: Remote INFO button wasn't working for show file info
  - 02-11-2004 updated: German language file
  - 02-11-2004 fixed: After showing video/album info item is selected